--- a/dom/ipc/tests/test_NuwaProcessCreation.html
+++ b/dom/ipc/tests/test_NuwaProcessCreation.html
@@ -54,8 +54,6 @@ setPref('dom.ipc.processPriorityManager.backgroundLRUPoolLevels', 2);
 
 function runTest()
 {
-  // Shutdown preallocated process.
-  SpecialPowers.setBoolPref('dom.ipc.processPrelaunch.enabled', false);
   let cpmm = SpecialPowers.Cc["@mozilla.org/childprocessmessagemanager;1"]
                           .getService(SpecialPowers.Ci.nsISyncMessageSender);
   let seenNuwaReady = false;
@@ -93,7 +91,14 @@ function runTest()
   SpecialPowers.setBoolPref('dom.ipc.processPrelaunch.enabled', true);
 }
 
-testLoader.onTestReady = runTest;
+function prepareTest() {
+  // Shutdown preallocated process.
+  SpecialPowers.pushPrefEnv({
+    'set': [['dom.ipc.processPrelaunch.enabled', false]]
+  }, runTest);
+}
+
+testLoader.onTestReady = prepareTest;
 </script>
 </body>
 </html>
